<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@color/colorPrimaryBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.mortezaafshari.alfia.ACTIVITY_LoginSignIn">

    <LinearLayout
        android:id="@+id/LINEAR_ReturnSignIn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="18dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/FABUTTON_ReturnSignIn"
            android:layout_width="0dp"


            android:layout_height="56dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:rotationX="0"
            android:src="@drawable/ic_keyboard_return_white_24dp"
            app:elevation="8dp"
            app:fabSize="mini" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/SUPPORT_SignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <EditText
            android:id="@+id/EDITTEXT_SignInEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:ems="13"
            android:gravity="right"
            android:hint="@string/fa_Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/SUPPORT_SignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        app:passwordToggleEnabled="true">

    <EditText
            android:id="@+id/EDITTEXT_SignInPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:gravity="right"
            android:hint="@string/fa_Password"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="77dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/TEXTVIEW_SignInForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/fa_ForgetPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BUTTON_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorButton1"
        android:elevation="2dp"
        android:text="@string/fa_Enter"
        android:textColor="@color/colorButtonText1"
        android:textSize="20sp" />
</LinearLayout>
