<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.mortezaafshari.alfia.ACTIVITY_LoginMain">

    <android.support.v7.widget.Toolbar
        android:id="@+id/TOOLBAR_LoginMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/fa_LoginSignUp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <ImageView
        android:id="@+id/IMAGEVIEW_ShowLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.45"
        android:maxHeight="60dp"
        android:minHeight="61dp"
        app:srcCompat="@drawable/icon"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/BUTTON_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0.15"
        android:backgroundTint="@color/colorButton1"
        android:elevation="2dp"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:text="@string/fa_LoginSignIn"
        android:textColor="@color/colorButtonText1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/BUTTON_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0.08"
        android:backgroundTint="@color/colorButton1"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/fa_LoginSignUp"
        android:textColor="@color/colorButtonText1"
        android:textSize="20sp"
        tools:ignore="ButtonStyle" />

    <TextView
        android:id="@+id/TEXTVIEW_EnterAsGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="14dp"
        android:layout_weight="0.08"
        android:clickable="true"
        android:gravity="center"
        android:linksClickable="false"
        android:text="@string/fa_EnterAsGuest"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
